other/prevent-duplicate-vpa/.chainsaw-test/bad.yaml
apiVersion: autoscaling.k8s.io/v1
kind: VerticalPodAutoscaler
metadata:
  name: new-bad01
spec:
  targetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: busybox
  updatePolicy:
    updateMode: Auto
---
apiVersion: autoscaling.k8s.io/v1
kind: VerticalPodAutoscaler
metadata:
  name: new-bad02
spec:
  targetRef:
    apiVersion: apps/v1
    kind: StatefulSet
    name: nginx
  updatePolicy:
    updateMode: Auto
