other/prevent-duplicate-vpa/.chainsaw-test/good.yaml
apiVersion: autoscaling.k8s.io/v1
kind: VerticalPodAutoscaler
metadata:
  name: new-good01
spec:
  targetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: redis
  updatePolicy:
    updateMode: Auto
---
apiVersion: autoscaling.k8s.io/v1
kind: VerticalPodAutoscaler
metadata:
  name: new-good02
spec:
  targetRef:
    apiVersion: apps/v1
    kind: StatefulSet
    name: circleci
  updatePolicy:
    updateMode: Auto
---
apiVersion: autoscaling.k8s.io/v1
kind: VerticalPodAutoscaler
metadata:
  name: new-good03
spec:
  targetRef:
    apiVersion: apps/v1
    kind: DaemonSet
    name: foobar
  updatePolicy:
    updateMode: Auto
