other/prevent-duplicate-vpa/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prevent-duplicate-vpa
status:
  ready: true
